@@ -6,16 +6,24 @@
 
     <groupId>com.app</groupId>
     <artifactId>CinemaTicketsJDBI</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>main</module>
+        <module>model</module>
+        <module>persistence</module>
+        <module>converters</module>
+        <module>exceptions</module>
+    </modules>
 
-    <name>CInemaTicketsJDBI</name>
+    <name>CinemaTicketsJDBI</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>13</maven.compiler.source>
-        <maven.compiler.target>13</maven.compiler.target>
+<!--        <maven.compiler.source>13</maven.compiler.source>-->
+<!--        <maven.compiler.target>13</maven.compiler.target>-->
     </properties>
 
     <dependencies>
@@ -145,6 +153,7 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
             <plugins>
                 <plugin>
                     <artifactId>maven-clean-plugin</artifactId>
@@ -164,7 +173,7 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.2</version>
+                    <version>3.0.0-M3</version>
                     <configuration>
                         <argLine>--enable-preview</argLine>
                     </configuration>
@@ -172,6 +181,13 @@
                 <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.0.2</version>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <MainClass>main.Main</MainClass>
+                            </manifest>
+                        </archive>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-install-plugin</artifactId>
@@ -190,22 +206,16 @@
                     <version>3.0.0</version>
                 </plugin>
                 <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>1.6.0</version>
                     <configuration>
-                        <mainClass>com.app.main.Main</mainClass>
-                        <arguments>--enable preview</arguments>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <configuration>
-                        <source>13</source>
-                        <target>13</target>
+                        <arguments>--enable-preview</arguments>
+                        <mainClass>main.Main</mainClass>
                     </configuration>
                 </plugin>
             </plugins>
+        </pluginManagement>
+
     </build>
 </project>
